# esp-matter

./: .gitlab-ci.yml  .gitmodules  README.md  export.sh
awox_light/common/platform/ESP32_custom/BleManager/: BleGatt.cpp  BleGatt.hpp  BleManager.cpp  BleManager.hpp  CMakeLists.txt
awox_light/common/platform/ESP32_custom/BleManager/Characteristics/: BleDataCommandChr.cpp  BleDataCommandChr.hpp  BleDataNotificationChr.cpp  BleDataNotificationChr.hpp  BleFastOtaChr.cpp  BleFastOtaChr.hpp  BlePairingChr.cpp  BlePairingChr.hpp
awox_light/light_cw_bulb/: CMakeLists.txt
awox_light/light_cw_bulb/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  indicator.h
awox_light/light_cw_bulb/main/led_pattern/: led_pattern.h
awox_light/light_cw_pwm/: CMakeLists.txt  partitions.csv  sdkconfig.defaults.esp32h2
awox_light/light_dimmable_pwm/: CMakeLists.txt  sdkconfig.defaults.esp32h2
awox_light/light_example/: sdkconfig.defaults.esp32h2
awox_light/light_rgbcw_bulb/: CMakeLists.txt  sdkconfig.defaults.esp32h2
awox_light/light_rgbcw_iic/: CMakeLists.txt  sdkconfig.defaults.esp32h2
awox_light/light_rgbcw_pwm/: CMakeLists.txt  sdkconfig.defaults.esp32h2
awox_light/light_rgbcw_strip/: CMakeLists.txt
components/board/: CMakeLists.txt  Kconfig  Kconfig.projbuild  get_board.cmake
components/button_driver/: CMakeLists.txt
components/esp_matter/: CMakeLists.txt  Kconfig  esp_matter.h  esp_matter_attribute.cpp  esp_matter_attribute.h  esp_matter_attribute_utils.cpp  esp_matter_attribute_utils.h  esp_matter_client.cpp  esp_matter_client.h  esp_matter_cluster.cpp  esp_matter_cluster.h  esp_matter_command.cpp  esp_matter_command.h  esp_matter_core.cpp  esp_matter_core.h  esp_matter_endpoint.cpp  esp_matter_endpoint.h  esp_matter_feature.cpp  esp_matter_feature.h  esp_matter_identify.cpp  esp_matter_ota.cpp  esp_matter_providers.cpp  idf_component.yml
components/esp_matter_bridge/: esp_matter_bridge.cpp
components/esp_matter_console/: esp_matter_console.cpp  esp_matter_console.h  esp_matter_console_wifi.cpp
components/esp_matter_controller/: CMakeLists.txt
components/led_driver/: CMakeLists.txt
components/led_driver/gpio/: led_driver.c
components/led_driver/hollow/: led_driver.c
components/led_driver/include/: color_format.h  led_driver.h
components/led_driver/no_led/: led_driver.c
components/led_driver/rmt/: led_driver.c
components/led_driver/vled/: led_driver.c
device_hal/buzzer_driver/: CMakeLists.txt
device_hal/device/: CMakeLists.txt
device_hal/device/esp32_devkit_c/: device.c  esp_matter_device.cmake
device_hal/device/esp32c3_devkit_m/: device.c  esp_matter_device.cmake
device_hal/device/esp32h2_devkit_c/: device.c
device_hal/device/esp32p4_devkit_c/: esp_matter_device.cmake
device_hal/device/esp32s3_devkit_c/: esp_matter_device.cmake
device_hal/device/include/: device.h
device_hal/fan_driver/: CMakeLists.txt
device_hal/led_driver/: CMakeLists.txt
docs/en/: certification.rst  developing.rst
docs/zh_CN/: app_guide.rst  certification.rst  conf.py
examples/: README.md
examples/buzzer/: CMakeLists.txt
examples/controller/: CMakeLists.txt  Rework_Setup.md  partitions.csv  partitions_br.csv  sdkconfig.defaults.esp32s3  sdkconfig.defaults.otbr
examples/dimmable_plug/: partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32h2  secure_boot_signing_key.pem
examples/esp-rainmaker-matter-app/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/fan/: CMakeLists.txt  README.md
examples/generic_switch/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/lcd_screen/: CMakeLists.txt  sdkconfig.defaults
examples/lcd_screen/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h
examples/lcd_screen/main/include/: app_lcd.hpp
examples/lcd_screen/main/src/: app_lcd.cpp
examples/light/: CMakeLists.txt  README.md  README_OTBR.md  example.README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.otbr  sdkconfig.optimizeflash.esp32h2
examples/light/main/: CHIPProjectConfig.h  CMakeLists.txt  app_constants.h  app_driver.cpp  app_main.cpp  app_matter.cpp  app_priv.h  chip_project_config.h  esp_touchlink_light.h  factory_reset.cpp  factory_reset.h  idf_component.yml  indicator.h  linker.lf  main.cpp  matter_dac_verify.h  static-supported-modes-manager.cpp  static-supported-modes-manager.h
examples/light/main/include/: app_constants.hpp  app_lcd.hpp  app_matter.h  device_callbacks.hpp  lighting_app_constants.hpp
examples/light/main/src/: app_lcd.cpp
examples/light_sensor/: CMakeLists.txt
examples/light_switch/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32s3
examples/light_with_rainmaker/: CMakeLists.txt  README.md
examples/lighting-app/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/lighting-app/main/: CMakeLists.txt  Kconfig.projbuild  device_callbacks.cpp  led_manager.cpp  led_manager_gpio.cpp  led_manager_rmt.cpp  led_manager_vled.cpp  main.cpp
examples/lighting-app/main/include/: device_callbacks.hpp  led_manager.hpp  lighting_app_constants.hpp
examples/mfg_test_app/: CMakeLists.txt  sdkconfig.defaults  secure_boot_signing_key_ecdsa.pem  secure_boot_signing_key_rsa.pem
examples/occupancy_light_switch/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32h2
examples/rainmaker_light/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/rainmaker_light/main/: CMakeLists.txt  app_constants.h  app_main.cpp  app_matter.cpp  app_rainmaker.c  main.cpp  rainmaker_light.zap
examples/rainmaker_light/main/include/: app_constants.hpp  app_matter.h  app_rainmaker.h  lighting_app_constants.hpp
examples/s3_box_switch/main/: CMakeLists.txt  app_driver.cpp  app_driver.h  app_main.cpp  app_priv.h
examples/s3_box_switch/main/box/: box_main.c  settings.c
examples/s3_box_switch/main/box/app/: app_fan.c  app_fan.h  app_sr.c  app_sr.h  app_sr_handler.c  app_wifi.c
examples/s3_box_switch/main/box/gui/: ui_device_ctrl.c
(+253 files in other folders)
